--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="au.radsoft.clock"
-      android:versionCode="2"
-      android:versionName="2">
+      android:versionCode="3"
+      android:versionName="3">
     <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="4" />
     <application
         android:label="@string/app_name"
@@ -15,6 +15,18 @@
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/clock_widget" />
         </receiver>
+        <activity android:name="ShowAlarms"
+                  android:label="@string/show_alarms"
+                  android:theme="@android:style/Theme.NoDisplay"
+                  android:excludeFromRecents="true"
+                  android:finishOnTaskLaunch="true"
+                  android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.SHOW_ALARMS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
     <supports-screens android:anyDensity="true" />
-</manifest> 
+</manifest>
+
